--- a/index.html
+++ b/index.html
@@ -2,42 +2,129 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=person" />
     <title>Document</title>
 </head>
-<body class="bg-black text-white m-20">
-    <main class="capitalize">
-        <header class="flex justify-between items-center ">
-            <div class="flex items-center gap-4 ">
-                <img src="./assets/images/Frame.png" alt="oceane" class="bg-none">
-                znisa 
-            </div>
-            <div class=" rounded-full   bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 p-1 ">
-                <ul class="flex gap-20 items-center bg-black h-full w-full rounded-full ">
-                    <li>
-                        <a href="#">
-                            <img src="./assets/images/Home.png" alt="">
-                        </a>
-                    </li>
-                    <li><a href="#" class="">about</a></li>
-                    <li><a href="#">projects</a></li>
-                    <li><a href="#" class="pr-5">contact me</a></li>
-                </ul>
-            </div>
-            <div class="flex items-center justify-center">
-                <div class="w-full" >
-                    <button type="submit" class="rounded-full bg-gradient-to-br from-blue-900 to-pink-500 text-white w-full px-6 py-4"  >Hire me</button>
+<body class="bg-black capitalize  text-white ">
+    <header class="flex justify-between items-center m-10 lg:m-20">
+        <div class="flex  gap-4 items-center">
+            <img src="./assets/images/Frame.png" alt="">
+            znisa
+        </div>
+        <div class=" rounded-full   bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 p-1 hidden lg:block ">
+            <ul class="flex gap-20 items-center bg-black h-full w-full rounded-full  ">
+                <li>
+                    <a href="#">
+                        <img src="./assets/images/Home.png" alt="">
+                    </a>
+                </li>
+                <li><a href="#" class="">about</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#" class="pr-5">contact me</a></li>
+            </ul>
+        </div>
+        <div class="block lg:hidden">
+            <img src="./assets/images/Home (1).png" alt="">
+        </div>
+        <div class="lg:flex lg:items-center lg:justify-center hidden lg:block">
+            <div class="w-full" >
+                <button type="submit" class="rounded-full bg-gradient-to-br from-blue-900 to-pink-500 text-white w-full px-6 py-4"  >Hire me</button>
 
-                </div>
-                <div class="rounded-full bg-gradient-to-br from-blue-900 to-pink-500 px-5 py-5">
-                        <img src="./assets/images/person.svg" alt="" class="">
-                </div>
-
-                
             </div>
-        </header>
-    </main>
+            <div class="rounded-full bg-gradient-to-br from-blue-900 to-pink-500 px-5 py-5">
+                    <img src="./assets/images/person.svg" alt="" class="">
+            </div>
+
+            
+        </div>
+    </header>
+    <section class="my-6 ">
+        <table class="border-collapse border border-gray-400 ...">
+            <thead>
+              <tr>
+                <th class="border border-gray-300 ...">State</th>
+                <th class="border border-gray-300 ...">City</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="border border-gray-300 ...">Indiana</td>
+                <td class="border border-gray-300 ...">Indianapolis</td>
+              </tr>
+              <tr>
+                <td class="border border-gray-300 ...">Ohio</td>
+                <td class="border border-gray-300 ...">Columbus</td>
+              </tr>
+              <tr>
+                <td class="border border-gray-300 ...">Michigan</td>
+                <td class="border border-gray-300 ...">Detroit</td>
+              </tr>
+            </tbody>
+          </table>
+    </section>
+    <section>
+        <ul class="flex justify-between border-2 border-l-0 border-r-0 px-24">
+            <li>framer</li>
+            <li><img src="./assets/images/22.png" alt=""></li>
+            <li>webflow</li>
+            <li><img src="./assets/images/22.png" alt=""></li>
+            <li>figma</li>
+            <li><img src="./assets/images/22.png" alt=""></li>
+            <li class="hidden lg:block">notion</li>
+            <li class="hidden lg:block"><img src="./assets/images/22.png" alt=""></li>
+
+        </ul>
+    </section>
+    <section class="my-10 flex flex-col gap-8">
+        <h1> my process to design</h1>
+        <div class="flex">
+            <div class="flex-1">
+
+            </div>
+            <div class="flex flex-col gap-8 flex-1 justify-center">
+                <img src="./assets/images/Ellipse 17.png" alt="" class="w-12">
+                <h1>Step 1: Product design Research</h1>
+                <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
+                <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
+                    <div class=" bg-black  rounded-full ">
+                        See Examples
+                    </div>
+                </button>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="flex-1">
+
+            </div>
+            <div class="flex flex-col gap-8 flex-1 justify-center">
+                <img src="./assets/images/Ellipse 17.png" alt="" class="w-12">
+                <h1>Step 2: UI design in figma</h1>
+                <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
+                <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
+                    <div class=" bg-black  rounded-full ">
+                        See Examples
+                    </div>
+                </button>
+            </div>
+        </div>
+        <div class="flex">
+            <div class="flex-1">
+
+            </div>
+            <div class="flex flex-col gap-8 flex-1 justify-center">
+                <img src="./assets/images/Ellipse 17.png" alt="" class="w-12">
+                <h1>Step 1: No-code develop in webflow</h1>
+                <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
+                <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
+                    <div class=" bg-black  rounded-full ">
+                        See Examples
+                    </div>
+                </button>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
