--- a/index.html
+++ b/index.html
@@ -77,14 +77,32 @@
 
         </ul>
     </section>
-    <section class="my-10 flex flex-col gap-8">
+    <section class="m-12 flex flex-col gap-8">
         <h1> my process to design</h1>
-        <div class="flex">
-            <div class="flex-1">
-
+        <div class="flex gap-10">
+            <div class="flex flex-col items-center">
+                <div class="1 rounded-full flex items-center justify-center border-white h-10   w-10  bg-black border-2  ">1 </div>
+                <hr class="bg-white ">
             </div>
-            <div class="flex flex-col gap-8 flex-1 justify-center">
-                <img src="./assets/images/Ellipse 17.png" alt="" class="w-12">
+            <div class="flex flex-col gap-8  justify-center">
+                <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
+                <h1>Step 1: Product design Research</h1>
+                <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
+                <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
+                    <div class=" bg-black  rounded-full "> 
+                        See Examples
+                    </div>
+                </button>
+            </div>
+        </div>
+        <div class="flex gap-10">
+            <div class="flex flex-col items-center">
+                
+                <div class="1 rounded-full flex items-center justify-center border-white h-10   w-10  bg-black border-2  ">1 </div>
+                <div class="bg-white w-1 h-full "></div>
+            </div>
+            <div class="flex flex-col gap-8  justify-center">
+                <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
                 <h1>Step 1: Product design Research</h1>
                 <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
                 <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
@@ -94,28 +112,14 @@
                 </button>
             </div>
         </div>
-        <div class="flex">
-            <div class="flex-1">
-
+        <div class="flex gap-10">
+            <div class="flex flex-col items-center">
+                <div class="1 rounded-full flex items-center justify-center border-white h-10   w-10  bg-black border-2  ">1 </div>
+                <hr class="bg-white ">
             </div>
-            <div class="flex flex-col gap-8 flex-1 justify-center">
-                <img src="./assets/images/Ellipse 17.png" alt="" class="w-12">
-                <h1>Step 2: UI design in figma</h1>
-                <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
-                <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
-                    <div class=" bg-black  rounded-full ">
-                        See Examples
-                    </div>
-                </button>
-            </div>
-        </div>
-        <div class="flex">
-            <div class="flex-1">
-
-            </div>
-            <div class="flex flex-col gap-8 flex-1 justify-center">
-                <img src="./assets/images/Ellipse 17.png" alt="" class="w-12">
-                <h1>Step 1: No-code develop in webflow</h1>
+            <div class="flex flex-col gap-8  justify-center">
+                <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
+                <h1>Step 1: Product design Research</h1>
                 <p>This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
                 <button type="submit" class="bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 rounded-full p-1 w-32  ">
                     <div class=" bg-black  rounded-full ">
