--- a/index.html
+++ b/index.html
@@ -8,21 +8,10 @@
     <title>Document</title>
     <style type="text/tailwindcss">
         @theme {
-         --color-body: #101111;
-         --color-bleu: #7A87FB;
-         --color-rose: #FFD49C;
-         --color-button: #292929;
-         --color-noir: #151515;
-         --color-gris: #878787;
-         --color-icone: #292929;
-         --color-blanc: #FAFAFA;
-         --color-white: #FFFFFF;
-         --color-nav: #1C1C1C;
-         --font-poppins: "Poppins";
         }
     </style>
 </head>
-<body class="bg-[#101111] capitalize  text-white ">
+<body class="bg-[#101111] capitalize  text-white overflow-x-hidden flex flex-col gap-8 ">
     <header class="flex justify-between items-center m-10 lg:m-20">
         <div class="flex  gap-4 items-center">
             <img src="./assets/images/Frame.png" alt="">
@@ -61,7 +50,7 @@
         
     </section>
     <!-- section 3 -->
-    <section class="m-12 flex flex-col gap-8">
+    <section class="mx-12 flex flex-col gap-8">
         <h1> my process to design</h1>
         <div class="flex gap-10">
             <div class="flex flex-col items-center">
@@ -149,27 +138,108 @@
             </div>
         </div>    
     </section>
-    <section>
+    <section class="flex flex-col gap-4">
         <div class="p-8 flex gap-4"> 
             <h1>Client testimonials</h1>
             <img src="./assets/images/frame.png" alt="">
         </div>
-        <div class="flex flex-col gap-8">
-            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 ">
-                <div class="flex gap-4 ">
-                    <div class="w-[35px] h-[35px] rounded-full bg-[#878787]">
-                    </div>
-                    <div>
+        <div class="flex flex-col gap-8 rounded-[19.8px] bg-gradient-to-br from-[#FFD49C] from-20% via-[#7A87FB] via-30% to-[#101111] to-45% mx-8 ">
+            <div class="  flex flex-col gap-8 p-6 rounded-[19.8px] bg-[#101111] ">
+                <div class="flex gap-4 items-center ">
+                    <div class="w-[35px] h-[35px] rounded-full bg-[#878787]"></div>
+                    <div class="flex flex-col gap-1">
                         <h1>Client Name . </h1>
                         <p>Product designer</p>
                     </div>
                 </div>
-                <div>
+                <div class="">
+                    <p>s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the </p>
+                </div>
+            </div>
+
+        </div> 
+        <div class="flex flex-col gap-8 rounded-[19.8px] bg-gradient-to-br from-[#FFD49C] from-15% via-[#7A87FB] via-30% to-[#101111] to-45% mx-8 ">
+            <div class="  flex flex-col gap-8 p-6 rounded-[19.8px] bg-[#101111] ">
+                <div class="flex gap-4 items-center ">
+                    <div class="w-[35px] h-[35px] rounded-full bg-[#878787]"></div>
+                    <div class="flex flex-col gap-1">
+                        <h1>Client Name . </h1>
+                        <p>Product designer</p>
+                    </div>
+                </div>
+                <div class="">
                     <p>s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the </p>
                 </div>
             </div>
 
         </div>    
+        <div class="flex flex-col gap-8 rounded-[19.8px] bg-gradient-to-br from-[#FFD49C] from-15% via-[#7A87FB] via-30% to-[#101111] to-45% mx-8 ">
+            <div class="  flex flex-col gap-8 p-6 rounded-[19.8px] bg-[#101111] ">
+                <div class="flex gap-4 items-center ">
+                    <div class="w-[35px] h-[35px] rounded-full bg-[#878787]"></div>
+                    <div class="flex flex-col gap-1">
+                        <h1>Client Name . </h1>
+                        <p>Product designer</p>
+                    </div>
+                </div>
+                <div class="">
+                    <p>s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the </p>
+                </div>
+            </div>
+
+        </div>    
+        <div class="flex flex-col gap-8 rounded-[19.8px] bg-gradient-to-br from-[#FFD49C] from-15% via-[#7A87FB] via-30% to-[#101111] to-45% mx-8 ">
+            <div class="  flex flex-col gap-8 p-6 rounded-[19.8px] bg-[#101111] ">
+                <div class="flex gap-4 items-center ">
+                    <div class="w-[35px] h-[35px] rounded-full bg-[#878787]"></div>
+                    <div class="flex flex-col gap-1">
+                        <h1>Client Name . </h1>
+                        <p>Product designer</p>
+                    </div>
+                </div>
+                <div class="">
+                    <p>s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the </p>
+                </div>
+            </div>
+
+        </div>    
+
     </section>
+    <section>
+        <div class="p-8 flex gap-4"> 
+            <h1>Have idea about project?</h1>
+            <img src="./assets/images/frame.png" alt="">
+        </div>
+        <div class="px-10 flex flex-col gap-4">
+            <div>
+                <p>Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
+            </div>
+            <div>
+                <button type="submit" class=" px-6 p-3 flex justify-center text-center rounded-full text-black bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB]">Send us a message</button>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="mx-[35px] flex flex-col gap-4"  >
+            <div class=" rounded-full   bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] p-1 ">
+                <ul class="flex gap-20 items-center bg-black h-full w-full rounded-full  ">
+                    <li>
+                        <a href="#">
+                            <img src="./assets/images/Home.png" alt="">
+                        </a>
+                    </li>
+                    <li><a href="#" class="">about</a></li>
+                    <li><a href="#">projects</a></li>
+                    <li><a href="#" class="pr-5">contact me</a></li>
+                </ul>
+            </div>
+            <div class="flex  gap-4 items-center">
+                <img src="./assets/images/Frame.png" alt="">
+                znisa
+            </div>
+    
+        </div>
+    </footer>
 </body>
 </html>
