--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="widtd=device-widtd, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=person" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    <title>Document</title>
     <style type="text/tailwindcss">
         @theme {
          --color-body: #101111;
@@ -23,7 +24,7 @@
         }
     </style>
 </head>
-<body class="bg-[#101111] capitalize  text-white overflow-x-hidden flex flex-col gap-8 ">
+<body class="bg-[#101111] capitalize  font-poppins text-white overflow-x-hidden flex flex-col gap-8 ">
     <header class="flex justify-between items-center m-10 lg:m-20">
         <div class="flex  gap-4 items-center">
             <img src="./assets/images/Frame.png" alt="" class="">
@@ -69,7 +70,7 @@
                 <div class=" rounded-full flex items-center justify-center border-white h-13   w-10  bg-[#101111] border  ">1 </div>
                 <div class="bg-white w-[1px] h-full   mt-4 p-[-0.5px] "></div>
             </div>
-            <div class="flex flex-col gap-8  justify-center">
+            <div class="flex flex-col gap-8  justify-center lg:flex lg:gap-4 ">
                 <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
                 <h1>Step 1: Product design Research</h1>
                 <p class=" line-clamp-3 lg:line-clamp-2">This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
