--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </style>
 </head>
 <body class="bg-[#101111] capitalize  font-poppins text-white overflow-x-hidden flex flex-col gap-8 ">
-    <header class="flex justify-between items-center m-10 lg:m-20">
+    <!--Debut de la section 1-->
+    <header class="flex justify-between items-center m-10 lg:m-20 lg:justify-between">
         <div class="flex  gap-4 items-center">
             <img src="./assets/images/Frame.png" alt="" class="">
             znisa
@@ -59,8 +60,62 @@
     </header>
 
     
-    <section>
-        
+    <section class="flex flex-col justify-center items-center">
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-white"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-gray-4OO"></div>
+            <div class="border border-b-0 w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-gray-4OO"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-gray-4OO"></div>
+            <div class="border border-t-0  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-gray-4OO"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-gray-4OO"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+            <div class="border w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+
     </section>
     <section class="mx-12 flex flex-col gap-8">
         <h1> my process to design</h1>
@@ -125,7 +180,7 @@
 
         <div class="flex flex-col gap-8">
             <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8 lg:flex lg:flex-row lg:mx-[80px] lg:items-center lg:px-12 lg:py-8  ">
-                    <div class="bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px] lg:h-[400px] lg:w-[400px] lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
+                    <div class="bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px]  lg:w-3/5 lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
                     <div class="flex flex-col gap-8 pb-6  lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-[#151515] from-70%  to-white border border-gray-4OO">1</button>  
                         <h1 class="font-bold">Project Name </h1>
