texte sur l'image

--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
         <div class="mx-5 h-full flex ">
             <div class="border  w-32 h-16 border-gray-4OO"></div>
             <div class="border border-b-0 w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-
-        </div>
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border w-32 h-16"></div>
+            <div class="border border-b-0 w-32 h-16"></div>
+            <div class="border border-b-0 w-32 h-16"></div>
+            <div class="border border-b-0 w-32 h-16"></div>
             <div class="border  w-32 h-16"></div>
 
         </div>
         <div class="mx-5 h-full flex ">
             <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border border-t-0  w-32 h-16"></div>
+            <div class="border border-t-0 w-32 h-16"></div>
+            <div class="border border-t-0 w-32 h-16"></div>
+            <div class="border border-t-0 w-32 h-16"></div>
+            <div class="border border-t-0 w-32 h-16"></div>
+            <div class="border  w-32 h-16"></div>
+
+        </div>
+        <div class="mx-5 h-full flex ">
+            <div class="border  w-32 h-16 border-gray-4OO"></div>
+            <div class="border   w-32 h-16"></div>
             <div class="border  w-32 h-16"></div>
             <div class="border  w-32 h-16"></div>
             <div class="border w-32 h-16"></div>
