--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         }
     </style>
 </head>
-<body class="bg-[#101111] capitalize  font-poppins text-white overflow-x-hidden flex flex-col gap-8 ">
-    <!--Debut de la section 1-->
+<body class="bg-[#101111] capitalize w-screen font-poppins text-white overflow-x-hidden  justify-center flex flex-col gap-8 ">
+    <main class="overflow-x-hidden">
     <header class="flex justify-between items-center m-10 lg:m-20 lg:justify-between">
         <div class="flex  gap-4 items-center">
             <img src="./assets/images/Frame.png" alt="" class="">
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="block lg:hidden">
-            <img src="./assets/images/Home (1).png" alt="" class="border rounded-full">
+            <img src="./assets/images/Home (1).png" alt="" class=" bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB]  rounded-full">
         </div>
         <div class="lg:flex lg:items-center lg:justify-center hidden lg:block">
             <div class="w-full" >
@@ -60,64 +60,76 @@
     </header>
 
     
-    <section class="flex flex-col justify-center items-center">
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-white"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
+    <section class="flex flex-col justify-evenly items-center w-full  ">
+        <div class=" h-full  flex ">
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
 
         </div>
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border border-b-0 w-32 h-16"></div>
-            <div class="border border-b-0 w-32 h-16"></div>
-            <div class="border border-b-0 w-32 h-16"></div>
-            <div class="border border-b-0 w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
+        <div class="flex">
+            <div class="hidden lg:block">
+                <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+                <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+                <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            </div>  
+
+            <div class="flex  flex-col gap-8 pb-6 justify-center pt-4 px-5 lg:w-[550px]">
+                <h1 class="text-center  text-lg font-bold">I design and build clean websites</h1> 
+                <p class="line-clamp-2 text-center  text-sm px-20">Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
+                <div class="flex justify-center text-center items-center flex-1 border-[#FFFFFF33] h-18">
+                    <button type="submit" class="rounded-full flex items-center justify-center bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] p-1 text-black  px-6 py-2"  >Hire me</button>
+                </div>
+            </div>
+            <div class="hidden lg:block">
+                <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+                <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+                <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            </div>  
 
         </div>
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border border-t-0 w-32 h-16"></div>
-            <div class="border border-t-0 w-32 h-16"></div>
-            <div class="border border-t-0 w-32 h-16"></div>
-            <div class="border border-t-0 w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
+        <div class=" flex">
+            <div class="lg:border border-t-0 w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="lg:border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="lg:border border-t-0 border-r-0 w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="lg:border border-t-0 border-l-0  border-collapse w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="lg:border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="lg:border border-t-0 w-36 h-16 border-[#FFFFFF33]"></div>
 
         </div>
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border   w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
+        <div class=" flex">
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
 
         </div>
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-
-        </div>
-        <div class="mx-5 h-full flex ">
-            <div class="border  w-32 h-16 border-gray-4OO"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
-            <div class="border w-32 h-16"></div>
-            <div class="border  w-32 h-16"></div>
+        <div class=" flex">
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33]"></div>
+            <div class="border  w-36 h-16 border-[#FFFFFF33]"></div>
 
         </div>
 
+        <div class="w-full mx-12 justify-between border-y-[0.1px] px-5 py-5 items-center border-[#FFFFFF33] flex gap-4" >
+            <span>framer</span>
+            <img src="./assets/images/22.png" alt="">
+            <span>webflow</span>
+            <img src="./assets/images/22.png" alt="">
+            <span>figma</span>
+            <img src="./assets/images/22.png" alt="">
+
+        </div>
     </section>
-    <section class="mx-12 flex flex-col gap-8">
+    <section class="mx-12 flex flex-col gap-8 mt-4">
         <h1> my process to design</h1>
         <div class="flex gap-10">
             <div class="flex flex-col items-center">
@@ -129,7 +141,7 @@
                 <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
                 <h1>Step 1: Product design Research</h1>
                 <p class=" line-clamp-3 lg:line-clamp-2">This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
-                <button type="submit" class="bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] rounded-full p-1 w-32  ">
+                <button type="submit" class="bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] rounded-full p-1 w-36  ">
                     <div class=" bg-black  rounded-full ">
                         See Examples
                     </div>
@@ -146,7 +158,7 @@
                 <img src="./assets/images/Ellipse 18.png" alt="" class="w-10">
                 <h1>Step 2: UI design in figma</h1>
                 <p class=" line-clamp-3 lg:line-clamp-2">This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
-                <button type="submit" class="bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] rounded-full p-1 w-32  ">
+                <button type="submit" class="bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] rounded-full p-1 w-36  ">
                     <div class=" bg-black  rounded-full ">
                         See Examples
                     </div>
@@ -163,7 +175,7 @@
                 <img src="./assets/images/Ellipse 18.svg" alt="" class="w-10">
                 <h1>Step 1: No-code develop in webflow</h1>
                 <p class=" line-clamp-3 lg:line-clamp-2">This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
-                <button type="submit" class="bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] rounded-full p-1 w-32  ">
+                <button type="submit" class="bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] rounded-full p-1 w-36  ">
                     <div class=" bg-black  rounded-full ">
                         See Examples
                     </div>
@@ -179,26 +191,26 @@
         </div>
 
         <div class="flex flex-col gap-8">
-            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8 lg:flex lg:flex-row lg:mx-[80px] lg:items-center lg:px-12 lg:py-8  ">
-                    <div class="bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px]  lg:w-3/5 lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
-                    <div class="flex flex-col gap-8 pb-6  lg:flex-1 ">
+            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8  justify-evenly  lg:flex lg:flex-row lg:justify-center lg:items-center ">
+                    <div class="  bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px]  w-full lg:w-3/5 lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
+                    <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-[#151515] from-70%  to-white border border-gray-4OO">1</button>  
                         <h1 class="font-bold">Project Name </h1>
 
                     </div>
             </div>
-            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8 lg:flex lg:flex-row lg:mx-[80px] lg:items-center lg:px-12 lg:py-8  ">
-                    <div class="bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px] lg:h-[400px] lg:w-[400px] lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
-                    <div class="flex flex-col gap-8 pb-6  lg:flex-1 ">
-                        <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-[#151515] from-70%  to-white border border-gray-4OO">2</button>  
+            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8  justify-evenly lg:flex lg:flex-row lg:justify-center lg:items-center ">
+                    <div class="  bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px]  w-full lg:w-3/5 lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
+                    <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
+                        <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-[#151515] from-70%  to-white border border-gray-4OO">1</button>  
                         <h1 class="font-bold">Project Name </h1>
 
                     </div>
             </div>
-            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8 lg:flex lg:flex-row lg:mx-[80px] lg:items-center lg:px-12 lg:py-8  ">
-                    <div class="bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px] lg:h-[400px] lg:w-[400px] lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
-                    <div class="flex flex-col gap-8 pb-6  lg:flex-1 ">
-                        <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-[#151515] from-70%  to-white border border-gray-4OO">3</button>  
+            <div class="bg-[#151515] mx-[35px] flex flex-col gap-8 pt-8  justify-evenly lg:flex lg:flex-row lg:justify-center lg:items-center ">
+                    <div class="  bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] h-[316px]  w-full lg:w-3/5 lg:flex-1  lg:flex lg:flex-col lg:gap-10"></div>
+                    <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
+                        <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-[#151515] from-70%  to-white border border-gray-4OO">1</button>  
                         <h1 class="font-bold">Project Name </h1>
 
                     </div>
@@ -276,7 +288,7 @@
         </div>
 
     </section>
-    <section>
+    <section class="mb-6">
         <div class="p-8 flex gap-4"> 
             <h1>Have idea about project?</h1>
             <img src="./assets/images/frame.png" alt="">
@@ -367,5 +379,6 @@
     
         </div>
     </footer>
+</main>
 </body>
 </html>
