--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         
-        <div class="flex  flex-col gap-8 pb-6 justify-center pt-4 px-5 lg:w-[576px] block lg:hidden">
+        <div class="flex  flex-col gap-8 pb-6 justify-center pt-4 px-5 w-[576px] lg:w-[576px] block lg:hidden">
                 <h1 class="text-center  text-lg font-bold">I design and build clean websites</h1> 
                 <p class="line-clamp-2 text-center  text-sm px-20">Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
                 <div class="flex justify-center text-center items-center flex-1 border-[#FFFFFF33] h-18">
@@ -91,8 +91,8 @@
             </div>  
             
                 <div class="flex flex-col  ">
-                    <div class="bg-white">
-                        <div class="border  w-[576px] h-18 border-[#FFFFFF33] border-b-0  flex-1 lg:rounded-tr-xl lg:bg-[#101111]">
+                    <div class="bg-white lg:border-b-0">
+                        <div class="border  w-[576px] h-18 border-[#FFFFFF33] lg:border-b-0  lg:border-collapse flex-1 lg:rounded-tr-xl lg:bg-[#101111]">
                             <h1 class="text-center pt-10 text-lg font-bold">I design and build clean websites</h1> 
                         </div>
 
@@ -115,17 +115,17 @@
             </div>    
   
         </div>
-        <div class="bg-white">
-            <div class=" flex ">
-                    <div class="lg:border border border-t-0 lg:rounded-none w-36 h-16 border-[#FFFFFF33] bg-[#101111]"></div>
+        <div class="">
+            <div class=" flex bg-white border-t-0 ">
+                    <div class="lg:border border  border-t-0 lg:rounded-none w-36 h-16 border-[#FFFFFF33] bg-[#101111]"></div>
                     <div class="lg:border border w-36 h-16 lg:block  hidden border-[#FFFFFF33] bg-[#101111] lg:rounded-none"></div>
-                    <div class="lg:border border border-t-0 border-r-0  w-36 h-16 border-[#FFFFFF33] bg-[#101111]"></div>
-                    <div class="lg:border border border-t-0 border-l-0 lg:rounded-none  rounded-br-xl border-collapse w-36 h-16 border-[#FFFFFF33] bg-[#101111]"></div>
+                    <div class="lg:border border border-t-0 border-r-0   w-36 h-16 lg:border-[#FFFFFF33] border-[#101111] bg-[#101111]"></div>
+                    <div class="lg:border border border-t-0 border-l-0 lg:rounded-none  rounded-br-xl border-collapse w-36 h-16 lg:border-[#FFFFFF33] border-[#101111] bg-[#101111]"></div>
                     <div class="lg:border  border w-36 h-16 lg:block  hidden border-[#FFFFFF33] bg-[#101111]"></div>
                     <div class="lg:border border  border-t-0 w-36 h-16 lg:rounded-none  rounded-bl-xl border-[#FFFFFF33] bg-[#101111]"></div>
 
-                </div>
-                <div class=" flex ">
+            </div>
+                <div class=" flex bg-white ">
                     <div class="border  w-36 h-16 border-[#FFFFFF33] bg-[#101111]"></div>
                     <div class="border  w-36 h-16 lg:block  hidden border-[#FFFFFF33] bg-[#101111]"></div>
                     <div class="border  w-36 h-16 border-[#FFFFFF33] bg-[#101111]"></div>
