--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
     </style>
 </head>
-<body class="bg-[#101111] capitalize w-screen font-poppins text-white overflow-x-hidden  justify-center flex flex-col gap-8 ">
+<body class="bg-[#101111] capitalize w-screen font-poppins text-white sm:overflow-x-hidden  justify-center flex flex-col gap-8 ">
     <main class="overflow-x-hidden">
     <header class="flex justify-between items-center m-10 lg:m-20 lg:justify-between">
         <div class="flex  gap-4 items-center">
@@ -335,28 +335,28 @@
         </div>
 
     </section>
-    <section class="mb-6">
+    <section class="mb-16 lg:mb-16">
         <div class="p-8 flex gap-4 items-center"> 
             <h1 class="font-bold text-4xl">Have idea about project?</h1>
             <img src="./assets/images/frame.png" alt="" class="w-12 h-12">
         </div>
         <div class="px-10 flex flex-col gap-4">
             <div>
-                <p>Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
+                <p class="line-clamp-2">Write anything here something about yourself to showcase what actually you doing or targeting etc.</p>
             </div>
             <div>
-                <button type="submit" class=" px-6 p-3 flex justify-center text-center rounded-full text-black bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C]">Send us a message</button>
+                <button type="submit" class=" px-6 p-3 flex justify-center text-center rounded-full text-black bg-gradient-to-r from-[#7A87FB]  to-[#FFD49C] ">Send us a message</button>
             </div>
 
         </div>
     </section>
     <footer class="">
         <div class="mx-[35px] flex flex-col gap-4 lg:flex lg:flex-row lg:justify-between"  >
-            <div class=" rounded-full   bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] p-1 lg:hidden  ">
-                <ul class="flex gap-20 items-center bg-black h-full w-full rounded-full  justify-center pl-8 pr-8  ">
-                    <li>
+            <div class=" rounded-full   bg-gradient-to-r from-[#FFD49C]  to-[#7A87FB] p-1 block lg:hidden max-sm:h-10   ">
+                <ul class="flex gap-20 items-center bg-black h-full w-full rounded-full   justify-center pl-8 pr-8   ">
+                    <li class="  ">
                         <a href="#">
-                            <img src="./assets/images/Home.png" alt="oce">
+                            <img src="./assets/images/Home.png" alt="oce" class="max-sm:h-10">
                         </a>
                     </li>
                     <li>
