--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="bg-table w-[1px] h-full  mt-4 bottom-2 py-20 "></div>
             </div>
             <div class="flex flex-col gap-8  justify-center lg:flex lg:gap-8  pb-9">
-                <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
+                <img src="./assets/images/Ellipse 18.png" alt="" class="w-10">
                 <h1>Step 1: Product design Research</h1>
                 <p class=" line-clamp-3 lg:line-clamp-2">This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
             </div>
@@ -201,7 +201,7 @@
                 <div class="bg-table w-[1px] h-full  mt-4 bottom-2 py-5 lg:py-0"></div>
             </div>
             <div class="flex flex-col gap-8  justify-center lg:flex lg:gap-8  pb-9">
-                <img src="./assets/images/Ellipse 17.png" alt="" class="w-10">
+                <img src="./assets/images/Ellipse 18.svg" alt="" class="w-10">
                 <h1>Step 1: Product design Research</h1>
                 <p class=" line-clamp-3 lg:line-clamp-2">This initial step involves a systematic and thorough exploration of the market landscape, user needs, and existing solutions.</p>
             </div>
