--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
     </section>
     <section class="flex lg:mt-12">
-        <section class="mb-24 lg:flex-1 ">
+        <section class="mb-24 lg:w-3/5 lg:mx-12 ">
             <div class="p-8 flex gap-4 items-center"> 
                 <h1 class="font-bold text-3xl">Have idea about project?</h1>
                 <img src="./assets/images/frame.png" alt="" class="w-12 h-12">
@@ -342,37 +342,37 @@
 
             </div>
         </section>
-        <section class="hidden lg:block lg:mx-12 lg:mb-8  lg:flex-1">
-                <div class=" flex w-full h-24   ">
-                    <div class="border flex-1 border-table  border-t-0 border-b-0 border-l-0 border-r-0"></div>    
-                    <div class="border flex-1 border-table border-t-0  border-b-0 border-l-0"></div>    
-                    <div class="border flex-1 border-table border-t-0 border-b-0"></div>    
-                    <div class="border flex-1 border-table border-t-0 border-b-0"></div>    
-                    <div class="border flex-1 border-table w-12 border-t-0 border-r-0 border-b-0"></div>    
+        <section class="hidden lg:block  lg:mb-8  lg:flex-1">
+                <div class=" flex w-60 h-24   ">
+                    <div class="border w-16 border-table  border-t-0 border-b-0 border-l-0 border-r-0"></div>    
+                    <div class="border w-16 border-table border-t-0  border-b-0 border-l-0"></div>    
+                    <div class="border w-16 border-table border-t-0 border-b-0 "></div>    
+                    <div class="border w-16 border-table border-t-0 border-b-0"></div>    
+                    <div class="border w-12 border-table w-4 border-t-0 border-r-0 border-b-0 "></div>    
 
                 </div>
-                <div class=" flex w-full h-18 border-0 bg-white ">
-                    <div class="border flex-1 border-table border-t-0 border-l-0 border-r-0 bg-body "></div>    
-                    <div class="border flex-1 border-table border-t-0 border-l-0 bg-body"></div>    
-                    <div class="border flex-1 border-table border-t-0 bg-body bg-body rounded-br-xl"></div>    
-                    <div class="border flex-1 border-table border-t-0 bg-body rounded-bl-xl"></div>    
-                    <div class="border flex-1 border-table w-12 border-r-0 border-t-0 bg-body"></div>    
+                <div class=" flex  h-18 border-0 bg-white w-60 ">
+                    <div class="border w-16 border-table border-t-0 border-l-0 border-r-0 bg-body "></div>    
+                    <div class="border w-16 border-table border-t-0 border-l-0 bg-body rounded-br-xl"></div>    
+                    <div class="border w-16 border-table border-t-0 bg-body bg-body rounded-bl-xl "></div>    
+                    <div class="border w-16 border-table border-t-0 bg-body "></div>    
+                    <div class="border w-12 border-table w-12 border-r-0 border-t-0 bg-body"></div>    
 
                 </div>
-                <div class=" flex w-full h-18 bg-white ">
-                    <div class="border flex-1 border-table bg-body border-l-0 border-r-0"></div>    
-                    <div class="border flex-1 border-table bg-body border-l-0"></div>    
-                    <div class="border flex-1 border-table bg-body rounded-tr-xl"></div>    
-                    <div class="border flex-1 border-table bg-body rounded-tl-xl"></div>    
-                    <div class="border flex-1 border-table bg-body w-12 border-r-0"></div>    
+                <div class=" flex w-60 h-18 bg-white ">
+                    <div class="border w-16 border-table bg-body border-l-0 border-r-0"></div>    
+                    <div class="border w-16 border-table bg-body border-l-0 rounded-tr-xl"></div>    
+                    <div class="border w-16 border-table bg-body rounded-tl-xl rounded-br-xl"></div>    
+                    <div class="border w-16 border-table bg-body  rounded-bl-xl"></div>    
+                    <div class="border w-12 border-table bg-body w-12 border-r-0"></div>    
 
                 </div>
-                <div class=" flex w-full h-18 bg-white  ">
-                    <div class="border flex-1 border-table border-l-0 border-b-0 border-r-0 bg-body "></div>    
-                    <div class="border flex-1 border-table border-b-0 border-l-0 bg-body"></div>    
-                    <div class="border flex-1 border-table border-b-0 bg-body"></div>    
-                    <div class="border flex-1 border-table border-b-0 bg-body"></div>    
-                    <div class="border flex-1 border-table w-12 border-r-0 border-b-0 bg-body"></div>    
+                <div class=" flex w-60 h-18 bg-white  ">
+                    <div class="border w-16 border-table border-l-0 border-b-0 border-r-0 bg-body "></div>    
+                    <div class="border w-16 border-table border-b-0 border-l-0 bg-body"></div>    
+                    <div class="border w-16 border-table border-b-0 bg-body rounded-tr-xl"></div>    
+                    <div class="border w-16 border-table border-b-0 bg-body rounded-tl-xl"></div>    
+                    <div class="border w-12 border-table w-12 border-r-0 border-b-0 bg-body"></div>    
 
                 </div>
             
