--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="flex flex-col gap-8">
             <div class="bg-noir mx-[35px] flex flex-col gap-8 pt-8 lg:pb-8  justify-evenly  lg:flex lg:flex-row lg:justify-center lg:items-center ">
                     <div class=" lg:w-3/5 ">
-                        <img src="./assets/images/Capture d’écran du 2025-02-28 17-44-08.png" alt="">
+                        <img src="./assets/images/Capture d’écran du 2025-02-28 17-44-08.png" alt=""  class="h-[310px]">
                     </div>
                     <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-noir from-70%  to-white border border-gray-4OO">1</button>  
@@ -235,8 +235,8 @@
                     </div>
             </div>
             <div class="bg-noir mx-[35px] flex flex-col gap-8 pt-8 lg:pb-8  justify-evenly lg:flex lg:flex-row lg:justify-center lg:items-center ">
-                    <div class=" lg:w-3/5 ">
-                        <img src="./assets/images/Capture d’écran du 2025-03-01 18-48-06.png" alt="">
+                    <div class=" lg:w-3/5  ">
+                        <img src="./assets/images/Capture d’écran du 2025-03-01 18-48-06.png" alt="" class="h-[310px]">
                     </div>
                     <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-noir from-70%  to-white border border-gray-4OO">2</button>  
