--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </div>
                     <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-noir from-70%  to-white border border-gray-4OO">1</button>  
-                        <h1 class="font-bold">Login-layout </h1>
+                        <h1 class="font-bold">portfolio </h1>
 
                     </div>
             </div>
@@ -241,14 +241,16 @@
                     <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-noir from-70%  to-white border border-gray-4OO">2</button>  
                         <h1 class="font-bold">landing-page</h1>
-
+                        
                     </div>
             </div>
             <div class="bg-noir mx-[35px] flex flex-col gap-8 pt-8 lg:pb-8  justify-evenly lg:flex lg:flex-row lg:justify-center lg:items-center ">
-                    <div class="  bg-gradient-to-r from-bleu  to-rose h-[316px]  w-full lg:w-3/5   lg:flex lg:flex-col lg:gap-10"></div>
+                    <div class=" lg:w-3/5  ">
+                        <img src="./assets/images/Image collée.png" alt="" class="h-[310px]">
+                    </div>
                     <div class="flex flex-col gap-8 pb-6 -pl-16 lg:flex-1 ">
                         <button type="submit" class="w-[35px] h-[35px] rounded-full bg-gradient-to-b  from-noir from-70%  to-white border border-gray-4OO">3</button>  
-                        <h1 class="font-bold"> portfolio </h1>
+                        <h1 class="font-bold"> wedding-invite</h1>
 
                     </div>
             </div>
